2002-09-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (make_pixmap): don't produce empty pages.

2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/translator-property-description.scm (voltaOnThisStaff): add
	property.

2002-09-28  Werner Lemberg  <wl@gnu.org>

	* scm/tex.scm (header-end): Suppress page numbering.

	* scripts/lilypond-book.py (output_dict) <output-texi-quoted>:
	Fix quotation for HTML output.

2002-09-28   Graham Percival   <gperciva@sfu.ca>
	
	* Documentation/user/refman.itely: grammar and phrasing
	  fixes to "Note Entry" section.  Also adds a few new examples.

2002-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* flower/include/string-data.icc: include string.h

2002-09-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chord-name.scm (chord::inner-name-banter): remove space.

2002-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile (extra-local-help): Add.

	* stepmake/stepmake/www-targets.make (local-help): Add.

2002-09-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/INSTALL.texi (Top): recommend binary
	packages.

	* Documentation/topdocs/README.texi (Top): building documentation
	(not website.)

2002-09-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/refman.itely: 
	* Documentation/user/tutorial.itely: 
	* Documentation/user/music-glossary.tely: Merge changes.

	* Documentation/user/glossary.html.in: 
	* Documentation/index.texi: 
	* Documentation/header.html.in: Accomodate renaming of glossary.
	
	* Documentation/user/tutorial.itely: Add some glossary references.
	
	* Documentation/user/refman.itely: Minor fixes.
	
	* Documentation/user/lilypond.tely: Add glossary do direntry.

	* Documentation/user/music-glossary.tely: Rename (previously:
	glossary.tely).  Fix anchor placement.

	* Documentation/user/GNUmakefile: Make music-glossary.info too.

2002-09-23  Werner Lemberg  <wl@gnu.org>

	* scripts/lilypond-book.py (output_dict): Fix handling of