@@ -1,3 +1,7 @@
+2002-10-03  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/beam.cc (rest_collision_callback): Fixed: partial rewrite.
+
 2002-09-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* scripts/lilypond-book.py (make_pixmap): don't produce empty pages.
